--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
-    <title>My Webpage</title>
+    <title>SandVich</title>
 </head>
 <body>
-    <!-- Your content goes here -->
-    <h1>Hello World!</h1>
-    <div id="kitty">
-        <img src="images/kitten.jpg" alt="This is a kitten.">
-        <button id="btn">Click me</button>
-    </div>
+    <h1>The Forge</h1>
+    <img src="images/thumbnail_IMG_0218.jpg">
+    <textarea id="w3review" name="w3review" rows="4" cols="50">BESTOW THE NAMESAKE OF THE SANDVICH
+        <input type="radio" id="html"  value="HTML">
+        <label for="html">HTML</label><br>
+        <input type="radio" id="css" value="css">
+        <label for="html">CSS</label><br>
 </body>
 </html>
