--- a/index.html
+++ b/index.html
@@ -2,16 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">4
+    <link rel="stylesheet" href="css/style.css">
     <title>SandVich</title>
 </head>
 <body>
-    <h1>The Forge</h1>
-    <img src="images/thumbnail_IMG_0218.jpg">
-    <textarea id="w3review" name="w3review" rows="4" cols="50">BESTOW THE NAMESAKE OF THE SANDVICH
-        <input type="radio" id="html"  value="HTML">
-        <label for="html">HTML</label><br>
-        <input type="radio" id="css" value="css">
-        <label for="html">CSS</label><br>
+    <div class="Merica">
+    <h1>The SandVich Forge</h1>
+    <br>
+    <h5>STEP 1: BESTOW THE NAMESAKE OF THE SANDVICH</h5>
+    <textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
+    <br>
+    <br>
+    <h5>STEP 2: CHOOSE YOUR BREAD</h5>
+        <input type="radio" name="bread">
+        <label >Wheat</label><br>
+        <input type="radio" name="bread">
+        <label >White</label><br>
+        <input type="radio" name="bread">
+        <label >Rye</label><br>
+        <input type="radio" name="bread">
+        <label >Gluten Free</label>
+        <br>
+        <br>
+        <h5>STEP 3: CHOOSE YOUR TOPPINGS</h5>
+        <input type="checkbox">
+        <label >Guacamole</label>
+        <input type="checkbox">
+        <label >Mayonnaise</label><br>
+        <input type="checkbox">
+        <label >Cream Cheese</label>
+        <input type="checkbox">
+        <label >Mustard</label><br>
+        <input type="checkbox">
+        <label >Bell Peppers</label>
+        <input type="checkbox">
+        <label >Butter</label><br>
+        <input type="checkbox">
+        <label >Jam</label><br>
+        <br>
+        <h5>STEP 4: CHOOSE YOUR MEAT</h5>
+        <select id="meat></select>
+        <label for ="meat"></label>
+        <option value="Salami">Salami</option>
+        <option value="ham">Ham</option>
+        <option value="turkey">Turkey</option>
+        <option value="meatballs">Meatballs</option>
+    </div>
 </body>
 </html>
